# aniworld-cli-py

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
aniworld_cli/: __init__.py  __main__.py  cli.py  config.py  episode.py  http.py  i18n.py  models.py  player.py  resolve.py  search.py  series.py  state.py
aniworld_cli/extractors/: __init__.py  doodstream.py  filemoon.py  speedfiles.py  streamtape.py  vidmoly.py  vidoza.py  voe.py
tests/: test_m1_scaffold.py  test_m2_search.py  test_m3_series_episode.py  test_m4_voe.py  test_m5_extractors.py  test_m6_args.py  test_m7_language.py  test_m8_state.py  test_m9_liveness.py
tests/fixtures/: embed_doodstream.html  embed_filemoon.html  embed_vidmoly.html  embed_voe.html  episode_naruto_s1e1.html  films_naruto.html  search_naruto.json  series_naruto.html  voe_embed.html  voe_mirror.html
