[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aniworld-cli"
version = "0.1.0"
description = "Pure-Python streaming-only CLI for aniworld.to (mpv via subprocess)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "dxmoc" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "questionary>=2.0",
]

[project.scripts]
aniworld-cli = "aniworld_cli.__main__:main"

[tool.setuptools.packages.find]
include = ["aniworld_cli*"]
